Fix review test