@@ -1,11 +1,11 @@
 package io.zetch.app.web;
 
+import com.google.gson.Gson;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import io.zetch.app.domain.review.ReviewDto;
 import io.zetch.app.domain.review.ReviewEntity;
 import io.zetch.app.service.ReviewService;
-import java.util.stream.Collectors;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
@@ -17,6 +17,7 @@ import org.springframework.web.bind.annotation.*;
 public class ReviewController {
   ModelMapper modelMapper = new ModelMapper();
   private final ReviewService reviewService;
+  private Gson g = new Gson();
 
   @Autowired
   public ReviewController(ReviewService reviewService) {
@@ -29,10 +30,10 @@ public class ReviewController {
   @GetMapping(path = "/")
   @Operation(summary = "Retrieve all reviews")
   @ResponseBody
-  Iterable<ReviewDto> getAllRestaurants() {
+  Iterable<ReviewDto> getAllReviews() {
     return reviewService.getAll().stream()
-        .map(r -> modelMapper.map(r, ReviewDto.class))
-        .collect(Collectors.toList());
+        .map(r -> g.fromJson(g.toJson(r), ReviewDto.class))
+        .toList();
   }
 
   /**
@@ -43,7 +44,6 @@ public class ReviewController {
   @Operation(summary = "Retrieve a single restaurant")
   ReviewDto getOneReview(@PathVariable Long reviewId) {
     ReviewEntity review = reviewService.getOne(reviewId);
-    ReviewDto reviewDto = modelMapper.map(review, ReviewDto.class);
-    return reviewDto;
+    return modelMapper.map(review, ReviewDto.class);
   }
 }
